Fix overflow behavior on header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1210,6 +1210,7 @@ $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, "Asap" ,Arial, sans
   height: 500px;
   width:100%;
   text-align:center;
+  overflow:hidden;
   p{
     margin-top:200px;
     display:block;
